[package]
name = "write-only-space"
version = "0.0.0"
authors = ["phil <uniphil@gmail.com>"]

[dependencies]
chrono = "0.2"
iron = "0.4"
logger = "0.1"
params = { git = "https://github.com/uniphil/params" }
persistent = "0.2"
postgres = { version = "0.11", features = ["chrono"] }
r2d2 = "0.7"
r2d2_postgres = "0.10"
route = "0.1.2"
rust-crypto = "0.2"
url = "1.2"
