[package]
name = "write-only-space"
version = "0.0.0"
authors = ["phil <uniphil@gmail.com>"]

[dependencies]
chrono = "0.2.25"
hyper = { version = "0.9.10", default-features = false }
hyper-rustls = "0.2.0"
iron = "0.4"
lazy_static = "0.2.1"
logger = "0.1"
params = { git = "https://github.com/uniphil/params" }
persistent = "0.2"
postgres = { version = "0.11", features = ["chrono", "uuid"] }
r2d2 = "0.7"
r2d2_postgres = "0.10"
route = "0.2.0"
rust-crypto = "0.2"
url = "1.2"
uuid = "0.3"
